Added DOM-TREE in structure.html

--- a/WEEK_1/structure.html
+++ b/WEEK_1/structure.html
@@ -5,7 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    
+<body style="background-color: hsl(30, 1%, 74%);">
+    <center>
+        <h1 style="font-family: Roboto;">
+            DOM-TREE
+        </h1>
+        <div style="display: flex;justify-content: space-around;">
+            <div  style="border-width: 40px;border-color: rgb(78, 78, 78); border: solid;">
+                <img src="DOM_tree.png">
+
+            </div>
+        </div>
+    </center>
+
 </body>
 </html>
