added the hrefs on the footer and added the search lab button

--- a/WEEK_1/index.html
+++ b/WEEK_1/index.html
@@ -35,6 +35,9 @@
                     Images
                 </a>
             </div>
+            <a  class ="Right_n"href="https://labs.google.com/search">
+                <img src="search_lab.png" height="30">
+            </a>
             <a href="https://about.google/products/" class="Right_n">
                 <div class="Right_n"> <!--designing the button using divs-->
                     <div style="display: flex;flex-direction: column;" >
@@ -132,25 +135,25 @@
         </div>
         <div class="footer" style="display: flex;justify-content: space-between;">
             <div>
-                <a class="links">
+                <a class="links" href="https://ads.google.com/intl/en_in/home/">
                     Advertising
                 </a>
-                <a class="links">
+                <a class="links" href="https://www.google.com/intl/en_in/business/">
                     Business
                 </a>
-                <a class="links">
+                <a class="links" href="https://www.google.com/search/howsearchworks/">
                     How Search Works
                 </a>
 
             </div>
             <div>
-                <a class="links">
+                <a class="links" href="https://policies.google.com/privacy">
                     Privacy
                 </a>
-                <a class="links">
+                <a class="links" href="https://policies.google.com/terms">
                     Terms
                 </a>
-                <a class="links">
+                <a class="links" href="">
                     Settings
                 </a>
 
