--- a/WEEK_1/index.html
+++ b/WEEK_1/index.html
@@ -39,27 +39,26 @@
                 <img src="search_lab.png" height="30">
             </a>
             <a href="https://about.google/products/" class="Right_n">
-                <div class="Right_n"> <!--designing the button using divs-->
-                    <div style="display: flex;flex-direction: column;" >
+                    <!--designing the button using divs-->
+                    <div style="display: flex;flex-direction: column;"class="Right_n" >
                         <div style="display: flex;margin: 1px 0px">
+                            <div style="height: 4px;width: 4px;background-color: rgb(51, 51, 51); margin : 0px 1px 0px 0px; border-radius: 3px;"></div>  
                             <div style="height: 4px;width: 4px;background-color: rgb(51, 51, 51); margin : 0px 1px; border-radius: 3px;"></div>  
-                            <div style="height: 4px;width: 4px;background-color: rgb(51, 51, 51); margin : 0px 1px; border-radius: 3px;"></div>  
-                            <div style="height: 4px;width: 4px;background-color: rgb(51, 51, 51); margin : 0px 1px; border-radius: 3px;"></div>  
+                            <div style="height: 4px;width: 4px;background-color: rgb(51, 51, 51); margin : 0px 0px 0px 1px; border-radius: 3px;"></div>  
                         </div>
                         <div style="display: flex;margin: 1px 0px">
+                            <div style="height: 4px;width: 4px;background-color: rgb(51, 51, 51); margin : 0px 1px 0px 0px; border-radius: 3px;"></div>  
                             <div style="height: 4px;width: 4px;background-color: rgb(51, 51, 51); margin : 0px 1px; border-radius: 3px;"></div>  
-                            <div style="height: 4px;width: 4px;background-color: rgb(51, 51, 51); margin : 0px 1px; border-radius: 3px;"></div>  
-                            <div style="height: 4px;width: 4px;background-color: rgb(51, 51, 51); margin : 0px 1px; border-radius: 3px;"></div>  
+                            <div style="height: 4px;width: 4px;background-color: rgb(51, 51, 51); margin : 0px 0px 0px 1px; border-radius: 3px;"></div>  
+ 
                         </div>
                         <div style="display: flex;margin: 1px 0px">
+                            <div style="height: 4px;width: 4px;background-color: rgb(51, 51, 51); margin : 0px 1px 0px 0px; border-radius: 3px;"></div>  
                             <div style="height: 4px;width: 4px;background-color: rgb(51, 51, 51); margin : 0px 1px; border-radius: 3px;"></div>  
-                            <div style="height: 4px;width: 4px;background-color: rgb(51, 51, 51); margin : 0px 1px; border-radius: 3px;"></div>  
-                            <div style="height: 4px;width: 4px;background-color: rgb(51, 51, 51); margin : 0px 1px; border-radius: 3px;"></div>  
+                            <div style="height: 4px;width: 4px;background-color: rgb(51, 51, 51); margin : 0px 0px 0px 1px; border-radius: 3px;"></div>  
+ 
                         </div>
                     </div>
-    
-                </div>
-                
             </a>
 
             <form action="https://accounts.google.com/InteractiveLogin/signinchooser" class="Right_n">
