added language links

--- a/WEEK_1/index.html
+++ b/WEEK_1/index.html
@@ -114,6 +114,11 @@
                         <div style="font-size: 14px;font-family: Roboto;">
                             Google offered in :
                             <a href="structure.html" id="DOM-tree">DOM-tree</a>
+                            <a href="" id="DOM-tree">हिन्दी</a>
+                            <a href="" id="DOM-tree">বাংলা </a>
+                            <a href="" id="DOM-tree">తెలుగు</a>
+                            <a href="" id="DOM-tree">मराठी</a>
+                            <a href="" id="DOM-tree">தமிழ்</a>
                         </div>
 
                     </div>
