minor aesthetic changes

--- a/WEEK_1/index.html
+++ b/WEEK_1/index.html
@@ -111,7 +111,7 @@
 
                     </div>
                     <div style="display: flex; justify-content: space-around;">
-                        <div style="font-size: 14px;font-family: Roboto;">
+                        <div style="font-size: 14px;font-family: Roboto, Arial, sans-serif;">
                             Google offered in :
                             <a href="structure.html" class="DOM-tree">DOM-tree</a>
                             <a href="#" class="DOM-tree">हिन्दी</a>
